Adding reset monitor functionality
