# uptime-robot-swagger.json
@@ -684,6 +684,62 @@
         ]
       }
     },
+    "/resetMonitor": {
+      "get": {
+        "summary": "Reset Monitor",
+        "description": "Monitors can be reset (deleting all stats and response time data) using this method.",
+        "operationId": "resetMonitor",
+        "parameters": [
+          {
+            "name": "apiKey",
+            "in": "query",
+            "description": "API key",
+            "type": "string",
+            "required": true
+          },
+          {
+            "name": "format",
+            "in": "query",
+            "description": "Response format",
+            "type": "string",
+            "default": "json",
+            "required": false
+          },
+          {
+            "name": "noJsonCallback",
+            "in": "query",
+            "description": "Return raw json",
+            "type": "string",
+            "default": "1",
+            "required": false
+          },
+          {
+            "name": "monitorID",
+            "in": "query",
+            "description": "ID of monitor to delete",
+            "type": "string",
+            "required": true
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "no error",
+            "schema": {
+              "$ref": "#/definitions/MonitorResponse"
+            }
+          },
+          "400": {
+            "description": "bad parameter"
+          },
+          "500": {
+            "description": "server error"
+          }
+        },
+        "tags": [
+          "UptimeRobot"
+        ]
+      }
+    },
     "/editMonitor": {
       "get": {
         "summary": "Edit a Monitor",
